crates/wdl-grammar/tests/parsing/many-unclosed/source.wdl
version 1.3

"${a(;b{{{{{{{{